# aoc-2020

commons/: Cargo.toml
commons/src/: geom.rs  grid.rs  io.rs  lib.rs
day-01/: Cargo.toml
day-01/src/: main.rs
day-02/: Cargo.toml
day-02/src/: main.rs
day-03/: Cargo.toml
day-03/src/: main.rs
day-04/: Cargo.toml
day-04/src/: main.rs
day-05/: Cargo.toml
day-05/src/: main.rs
day-06/: Cargo.toml
day-06/src/: main.rs
day-07/: Cargo.toml
day-07/src/: main.rs
day-08/: Cargo.toml
day-08/src/: main.rs
day-09/: Cargo.toml
day-09/src/: main.rs
day-10/: Cargo.toml
day-10/src/: main.rs
day-11/: Cargo.toml
day-11/src/: main.rs
day-12/: Cargo.toml
day-12/src/: main.rs
day-13/: Cargo.toml
day-13/src/: main.rs
day-14/: Cargo.toml
day-14/src/: main.rs
day-15/: Cargo.toml
day-15/src/: main.rs
day-16/: Cargo.toml
day-16/src/: main.rs
day-17/: Cargo.toml
day-17/src/: main.rs
day-18/: Cargo.toml
day-18/src/: grammar.lalrpop  lib.rs  main.rs  types.rs
day-19/: Cargo.toml
day-19/src/: grammar.lalrpop  main.rs  types.rs
day-20/: Cargo.toml  gridy.py
day-20/src/: main.rs
day-21/: Cargo.toml
day-21/src/: main.rs
day-22/: Cargo.toml
day-22/src/: main.rs
day-23/: Cargo.toml
day-23/src/: main.rs
day-24/: Cargo.toml
day-24/src/: main.rs
day-25/: Cargo.toml
day-25/src/: main.rs
