[package]
name = "day-04"
version = "0.1.0"
authors = ["Nicholas Hollett <niax@niax.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
derive_builder = "0.9.0"
lazy_static = "1.4.0"
